# ingestion_core

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  tox.ini
ingestion_core/: __init__.py  audit.py  contract_runtime.py  contracts_client.py  hash_diff.py  hash_diff_pipeline.py  hashing.py  object_store.py  postgres.py
ingestion_core/adapters/: __init__.py  object_store.py  oidc_sts.py
ingestion_core/cli/: __init__.py  _shared.py  incremental_audit_admin.py  logical_cdc_admin.py  peek_logical_cdc.py
ingestion_core/contracts/: __init__.py  registry_client.py  runtime.py  schema_validation.py  types.py
ingestion_core/strategies/: __init__.py
ingestion_core/strategies/common/: __init__.py  change_detection.py  delta_apply.py  source.py  target.py
ingestion_core/strategies/hash_diff/: __init__.py  engine.py  pipeline.py
ingestion_core/strategies/incremental_audit/: __init__.py  admin.py  apply.py  extract.py  pipeline.py  sql.py  types.py
ingestion_core/strategies/logical_cdc/: __init__.py  admin.py  apply.py  decode.py  extract.py  pipeline.py  sql.py  types.py
ingestion_core/utils/: __init__.py  hashing.py
ingestion_platform/: __init__.py  audit.py  contracts_client.py  hash_diff.py
tests/: test_contract_schema_validation.py  test_contracts_client.py  test_hashdiff_pipeline.py  test_hashdiff_unit.py  test_hashing.py  test_incremental_audit.py  test_integration_hashdiff.py  test_logical_cdc.py  test_oidc_sts.py
