[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion-platform"
version = "0.1.0"
description = "Airflow-based incremental ingestion platform with hash-diff strategy"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Data Platform Team" }
]
dependencies = [
  "requests==2.32.3",
  "SQLAlchemy==2.0.36",
  "psycopg2-binary==2.9.10"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0"
]

[tool.setuptools]
packages = ["ingestion_platform"]
