[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingestion-core"
version = "0.1.0"
description = "Reusable hash-diff ingestion engine and contract registry client"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Data Platform Team" }
]
dependencies = [
  "requests==2.32.5",
  "boto3==1.39.11",
  "SQLAlchemy==2.0.36",
  "psycopg2-binary==2.9.10"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0"
]
dev = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0",
  "build>=1.2,<2"
]

[project.scripts]
ingestion-peek-logical-cdc = "ingestion_core.cli.peek_logical_cdc:main"

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["ingestion_core*"]
